# nyx

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  deny.toml  justfile  rust-toolchain.toml
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
crates/nyx/: Cargo.toml  build.rs
crates/nyx-core/: Cargo.toml
crates/nyx-core/src/: error.rs  filter.rs  lib.rs  path.rs  remote.rs  secret.rs  transfer.rs
crates/nyx-drag/: Cargo.toml
crates/nyx-drag/src/: lib.rs  macos.rs  windows.rs
crates/nyx-keyring/: Cargo.toml
crates/nyx-keyring/src/: lib.rs
crates/nyx-profile/: Cargo.toml
crates/nyx-profile/src/: lib.rs  settings.rs
crates/nyx-protocol/: Cargo.toml
crates/nyx-protocol/src/: ftp.rs  ftps.rs  host_key.rs  known_hosts.rs  lib.rs  sftp.rs  util.rs
crates/nyx-service/: Cargo.toml
crates/nyx-service/src/: dto.rs  host_key_path.rs  lib.rs  reconnect.rs  search.rs  transfer.rs
crates/nyx-transfer/: Cargo.toml
crates/nyx-transfer/src/: lib.rs
crates/nyx-ui/: CLAUDE.md  Cargo.toml
crates/nyx-ui/examples/: gallery.rs
crates/nyx-ui/src/: lib.rs  styled_ext.rs  theme.rs  tokens.rs
crates/nyx-ui/src/components/: badge.rs  button.rs  context_menu.rs  icon_button.rs  mod.rs  modal.rs  progress_bar.rs  segmented.rs  select.rs  table.rs  tabs.rs  text_input.rs  toast.rs  toggle.rs  tooltip.rs
crates/nyx/src/: app.rs  assets.rs  drag.rs  icon.rs  keymap.rs  main.rs  theme_load.rs
crates/nyx/src/state/: connection.rs  dock.rs  editor.rs  event.rs  file_ops.rs  filter.rs  fixtures.rs  focus.rs  lifecycle.rs  mod.rs  models.rs  navigation.rs  overlay.rs  profile_menu.rs  query.rs  selection.rs  transfer.rs  types.rs
crates/nyx/src/views/: browser.rs  connection_editor.rs  mod.rs  sidebar.rs  status_bar.rs  transfer_dock.rs  welcome.rs
docs/: README.md  git-workflow.md  overview.md
docs/plans/: mvp-m1-app-shell.md  mvp-m2-sftp-connect-list.md  mvp-master-plan.md  plan-01-project-init.md  plan-02-nyx-ui-flint.md
docs/plans/done/: plan-02-nyx-ui-flint.md
docs/user/: README.md  custom-themes.md  example-theme.toml  getting-started.md  install.md  troubleshooting.md
scripts/: bundle-mac.sh  bundle-windows.ps1  sign-dev.sh
