[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
license = "GPL-3.0-or-later"
repository = "https://github.com/vojir-mikulas/nyx"
authors = ["vojir-mikulas <vojir.mikulas@gmail.com>"]

[workspace.dependencies]
# --- GPUI (pinned to a specific Zed revision for reproducible builds) ---
# At this rev GPUI is split: `gpui` (core) + `gpui_platform` (`application()`,
# platform dispatch) + `gpui_macros` (transitive). Platform features are NOT set
# here: Cargo features are additive, so a per-OS choice (`font-kit` on macOS;
# `gpui_platform` auto-selects the D3D/DirectWrite backend on Windows via its own
# target deps) must live in the *consuming* crates, not in this shared dep. We
# also deliberately leave the Linux-only `x11`/`wayland` features OFF.
gpui = { git = "https://github.com/zed-industries/zed", rev = "137e677a0561eb7284cfad1bedccea70155e2473", default-features = false }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "137e677a0561eb7284cfad1bedccea70155e2473", default-features = false }

# --- Async / backend ---
tokio = { version = "1", default-features = false }
# Channels/streams for the Tokio↔GPUI bridge: the service→UI `Event` side is a
# `futures::channel::mpsc` so the GPUI foreground executor can `await` it as a
# `Stream` inside `cx.spawn` (a blocking `std` recv there would freeze the UI).
futures = { version = "0.3", default-features = false, features = ["std"] }

# --- SFTP (V1 protocol) ---
# `russh` is the pure-Rust SSH transport; `russh-sftp` rides the SFTP subsystem
# over a russh channel. Both are Tokio-based and live behind `RemoteClient`.
russh = "0.61"
russh-sftp = "2.3"

# --- FTP / FTPS ---
# `suppaftp` is the FTP client (tokio backend); FTPS rides tokio-rustls (ring).
# `deprecated` enables implicit-FTPS connect. It re-exports `tokio_rustls` (and
# thus `rustls` 0.23) so our cert verifier links the exact same TLS types.
suppaftp = { version = "8", default-features = false, features = [
    "tokio",
    "tokio-rustls-ring",
    "deprecated",
] }
# Mozilla root store (pure data) so a normal CA-valid FTPS chain needs no prompt.
webpki-roots = "0.26"
# Leaf-certificate SHA-256 fingerprints for the FTPS trust-on-first-use store.
sha2 = "0.10"

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
# Profile store on-disk format (a single `profiles.toml` table-array).
toml = "0.8"
# Test-only: a self-describing format for serde round-trip assertions.
serde_json = "1"

# --- Persistence / paths / ids ---
# OS keychain for secrets (passwords); the platform-native backend feature is
# enabled per-crate (`apple-native` on macOS). Sync, blocking API — call sites
# run it off the GPUI thread.
keyring = "3"
# Per-OS config/data directories (profiles.toml, known_hosts).
directories = "6"
# Stable profile ids (uuid v4).
uuid = { version = "1", features = ["v4"] }
# `last_connected` timestamps with RFC3339 serde support.
time = { version = "0.3", features = ["serde-well-known", "macros"] }

# --- Errors ---
anyhow = "1"
thiserror = "2"

# --- Secret hygiene ---
# Zero a secret's heap buffer on drop (defense-in-depth behind `nyx_core::Secret`).
zeroize = { version = "1", features = ["zeroize_derive"] }

# --- Async trait objects (object-safe RemoteClient) ---
async-trait = "0.1"

# --- Logging / tracing ---
tracing = "0.1"
# App-edge log init (the binary only; libraries stay subscriber-agnostic).
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Rolling daily log file in the per-OS data dir (app edge only).
tracing-appender = "0.2"

# --- Embedded assets (fonts + icons baked into the app binary) ---
rust-embed = { version = "8", features = ["interpolate-folder-path"] }

# --- Internal crates (path deps; become git/crates.io on extraction) ---
nyx-core = { path = "crates/nyx-core" }
nyx-drag = { path = "crates/nyx-drag" }
nyx-service = { path = "crates/nyx-service" }
nyx-protocol = { path = "crates/nyx-protocol" }
nyx-transfer = { path = "crates/nyx-transfer" }
nyx-profile = { path = "crates/nyx-profile" }
nyx-keyring = { path = "crates/nyx-keyring" }
nyx-ui = { path = "crates/nyx-ui" }

[profile.dev]
# GPUI's dep tree is large; a touch of opt on deps keeps debug builds usable
# without slowing iteration on our own crates.
[profile.dev.package."*"]
opt-level = 2
