[package]
name = "nyx-core"
description = "Shared domain types for Nyx: errors, remote entries, transfer model."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
serde_json.workspace = true
