[package]
name = "nyx-drag"
description = "Platform adapter for dragging files OUT of the app to the OS (Finder/Explorer). Domain- and UI-agnostic."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# The one piece GPUI already gives us: a `raw_window_handle`-compatible window
# handle to anchor the native drag session to. Kept at the same 0.6 line GPUI
# pins so `&gpui::Window` satisfies `start_file_drag`'s bound after unification.
raw-window-handle = "0.6"
thiserror.workspace = true

# macOS promised-files drag-out: vended through the GPUI `NSView` via
# `NSFilePromiseProvider`. Versions match GPUI's pinned objc2 tree so the whole
# app shares one objc2 runtime.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "NSString",
    "NSArray",
    "NSURL",
    "NSOperation",
    "NSError",
    "NSDictionary",
    "NSObject",
] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "std",
    "NSApplication",
    "NSResponder",
    "NSView",
    "NSWindow",
    "NSEvent",
    "NSImage",
    "NSPasteboard",
    "NSDragging",
    "NSDraggingItem",
    "NSDraggingSession",
    "NSFilePromiseProvider",
    "block2",
] }
block2 = "0.6"

# Windows shell drag-out: a virtual-file `IDataObject` advertising
# `CFSTR_FILEDESCRIPTOR`/`CFSTR_FILECONTENTS` with delayed rendering, dragged via
# `DoDragDrop`. The bytes are produced lazily (the same `DragFetch` callback the
# macOS path uses) when the drop target pulls `FILECONTENTS`.
[target.'cfg(target_os = "windows")'.dependencies]
# `windows-core` is re-exported by `windows` as `windows::core`, but the
# `#[implement]` macro emits absolute `::windows_core` paths, so it must also be a
# direct dependency. Same 0.58 line → cargo unifies it (one COM type set).
windows-core = "0.58"
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
] }
