[package]
name = "nyx-keyring"
description = "OS-keychain credential storage. Credentials never touch logs or profile files."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
nyx-core.workspace = true
# Platform-native keychain backend. macOS uses `apple-native`; a Linux build
# later swaps this for `sync-secret-service` (a one-line change, see plan D3).
keyring = { workspace = true, features = ["apple-native"] }
