[package]
name = "nyx-keyring"
description = "OS-keychain credential storage. Credentials never touch logs or profile files."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
nyx-core.workspace = true

# Platform-native keychain backend, selected per-OS. Cargo features are additive,
# so the backend feature must be chosen here per target (not in the workspace dep
# where it would leak to every platform). The public API is backend-agnostic
# (`keyring::Entry` is identical across backends), so call sites are unaffected.
# macOS → Keychain; Windows → Credential Manager; Linux later → Secret Service
# (`sync-secret-service`, see plan D3).
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }

# Linux → freedesktop Secret Service over D-Bus (GNOME Keyring / KWallet). The
# sync backend needs a crypto provider for the encrypted session; `crypto-rust`
# is pure-Rust, so no OpenSSL native dep leaks into a portable Linux build.
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { workspace = true, features = ["sync-secret-service", "crypto-rust"] }
