[package]
name = "nyx-profile"
description = "Connection-profile model and persistence."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
nyx-core.workspace = true
serde.workspace = true
