[package]
name = "nyx-protocol"
description = "Remote-access protocol abstraction (RemoteClient) and the SFTP client."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
nyx-core.workspace = true
async-trait.workspace = true
