[package]
name = "nyx-protocol"
description = "Remote-access protocol abstraction (RemoteClient) and the SFTP client."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
nyx-core.workspace = true
async-trait.workspace = true
russh.workspace = true
russh-sftp.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "sync", "time", "rt"] }
tracing.workspace = true
