[package]
name = "nyx-service"
description = "Backend thread: owns the Tokio runtime, connections and the transfer queue."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
nyx-core.workspace = true
nyx-protocol.workspace = true
nyx-transfer.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time", "macros"] }
tracing.workspace = true
