[package]
name = "nyx-transfer"
description = "Transfer queue: concurrency, progress and cancellation."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
nyx-core.workspace = true
