[package]
name = "nyx-ui"
description = "In-house GPUI component library + theme for Nyx (extract → Flint). Zero app coupling."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# HARD RULE: nyx-ui must NEVER depend on any nyx-* crate. It is a generic GPUI
# component library that happens to live in this repo today (see plan-02).
[dependencies]
gpui.workspace = true
# Grapheme-aware cursor movement in TextInput (same crate GPUI's text uses).
unicode-segmentation = "1"

# macOS font loading goes through font-kit; other targets use GPUI's own backend.
# Selected per-OS because Cargo features are additive (see root Cargo.toml).
[target.'cfg(target_os = "macos")'.dependencies]
gpui = { workspace = true, features = ["font-kit"] }

# Dev-only: the gallery example needs `application()` to open a window. This is a
# dev-dependency, so the *library* still depends on `gpui` alone.
[dev-dependencies]
gpui_platform.workspace = true

[target.'cfg(target_os = "macos")'.dev-dependencies]
gpui_platform = { workspace = true, features = ["font-kit"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
gpui_platform = { workspace = true, features = ["x11", "wayland"] }

[[example]]
name = "gallery"
path = "examples/gallery.rs"
