[package]
name = "nyx"
description = "Nyx — a fast, reliable file-transfer client. The GPUI application binary."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
default-run = "nyx"

[[bin]]
name = "nyx"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
nyx-core.workspace = true
nyx-profile.workspace = true
nyx-service.workspace = true
nyx-ui.workspace = true
rust-embed.workspace = true
anyhow.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
